--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "jquery": "^3.6.4",
     "next": "13.2.4",
+    "nodemailer": "^6.7.2",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0"
   }
 }
