--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^10.0.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "firebase-admin": "^11.11.0",
     "jquery": "^3.6.4",
-    "next": "13.2.4",
+    "lucide-react": "^0.292.0",
+    "next": "^13.5.6",
     "nodemailer": "^6.7.2",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
